# aas-control

./: Cargo.toml  README.md  diesel.toml
app/: Cargo.toml
app/src/: api.rs  main.rs  session.rs
configs/: as-config.json  kbs-config.json  sgx_default_qcnl.conf
migrations/2023-05-25-092912_create_openanolis_user_table/: down.sql  up.sql
scripts/: docker-compose.yml  env.sh
service/: Cargo.toml
service/src/: api.rs  cleanup.rs  main.rs  session.rs
service/src/aas/: mod.rs
service/src/db/: mod.rs  models.rs  schema.rs
static/: created.html  guide.html  guide.md  invitation_list.conf  start.html
