[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4"
serde_json = "1.0.96"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["cookies", "json"] }
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
