[package]
name = "aas-control-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4"
serde_json = "1.0.96"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["cookies", "json"] }
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
sha2 = "0.9"
base64 = "0.13.0"
rand = "0.8.5"
diesel = { version = "2.0.4", features = ["mysql", "r2d2", "time"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
time = "0.3.21"
lazy_static = "1.4.0"
env-file-reader = "0.3.0"
regex = "1.8.3"
chrono = { version = "0.4.19", features = ["serde"] }
actix-files = "0.6.2"
mime = "0.3.16"